kubernetes/django_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-dep
  labels:
    app: django_app
spec:
  replicas: 1
  selector:
    matchLabels:
      project: kuber1
  template:
    metadata:
      labels:
        project: kuber1
    spec:
      containers:
        - name: container-django
          image: django_app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    env: prod
    owner: IBA
spec:
  selector:
    project: kuber1
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: star-burger.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
